# hexapod

./: .coveragerc  .env.picovoice  .gitignore  .gitmodules  INSTALL.md  NOTICE  README.md  install.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: README.md  audio_recording.md  gait_trajectories.md  odas_server.md
docs/audio/: audio_playback.md  audio_recording.md  audio_ssl.md
docs/core/: configuration.md  main_application.md  system_overview.md
docs/gamepad/: dual_mode_gamepad_controller.md  dual_mode_gamepad_controller.py
docs/hardware/: hardware_integration.md  imu_data_format.md  lights_system.md  servo_control.md
docs/interface/: gamepad_controller.md  task_interface.md  voice_control_interface.md
docs/odas/: doa_ssl_processor.md  odas_audio_playback.md  odas_audio_processing.md  odas_data_format.md  odas_kws_testing.md  odas_server.md  streaming_odas_audio_player.md
docs/robot/: gait_system.md  kinematics.md  movement_commands.md  movement_system.md
docs/sensors/: imu_data_format.md
docs/voice/: audio_playback.md  audio_processing.md  audio_recording.md  audio_ssl.md  doa_ssl_processor.md  odas_data_format.md  odas_kws_testing.md  odas_server.md  streaming_odas_audio_player.md  voice_control_system.md
hexapod/: __init__.py  config.py  main.py
hexapod/gait_generator/: __init__.py  base_gait.py  gait_generator.py  tripod_gait.py  wave_gait.py
hexapod/interface/: __init__.py
hexapod/kws/: __init__.py  intent_dispatcher.py  recorder.py  voice_control.py
hexapod/lights/: __init__.py  apa102.py  lights.py  lights_interaction_handler.py
hexapod/maestro/: __init__.py  maestro_uart.py
hexapod/odas/: __init__.py  odas_audio_processor.py  odas_doa_ssl_processor.py  odas_to_picovoice_wav.py  streaming_odas_audio_player.py
hexapod/robot/: __init__.py  balance_compensator.py  calibration.py  hexapod.py  joint.py  leg.py
hexapod/task_interface/: __init__.py  status_reporter.py  task_interface.py
hexapod/utils/: __init__.py  utils.py
lib/: requirements.txt
lib/maestro/: maestro_uart.py
lib/respeaker6/: get_index.py  record.py
logs/: config.json  config.yaml
scripts/: README.md  leg_workspace.py  test_body_ik_interactive.py  test_gait.py  test_gait_generator.py  test_joint.py  test_leg_workspace.py  test_picovoice_file.py  test_porcupine_file.py
scripts/controllers/: test_dualsense_controller.py  test_dualsense_led.py
scripts/movement/: gait_generator_tester.py  leg_workspace.py
scripts/sensors/: test_imu_output.py
scripts/voice_control/: test_picovoice_raw_file.py  test_rhino_file.py
software/sensor_integration/: robot_imu.py
src/: imu.py  main.py
src/control/: __init__.py  control_interface.py  control_module.py  control_tasks.py  gait_generator.py  state_manager.py
src/gait_generator/: __init__.py  base_gait.py  gait_generator.py  tripod_gait.py  wave_gait.py
src/hexapod/: __init__.py  hexapod.py  joint.py  leg.py
src/imu/: __init__.py  imu.py
src/interface/: __init__.py  input_handler.py  logger.py
src/kws/: README.md  __init__.py  control_module.py  intent.yml  intent_dispatcher.py  lights.py  recorder.py  temp.py  voice_control.py
src/lights/: __init__.py  animation.py  apa102.py  lights.py  lights_animation_handler.py  lights_interaction_handler.py
tests/: README.md  conftest.py
(+401 files in other folders)
